--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
 
   body {
     @apply font-sans text-neutral-200 bg-black antialiased tracking-tight;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
   }
 
   h1, h2, h3, h4 {
