--- a/src/index.css
+++ b/src/index.css
@@ -46,16 +46,34 @@
     0% {
       transform: translateX(-100%) skewX(-20deg);
     }
+    16.66% {
+      transform: translateX(calc(100% + 100vw)) skewX(-20deg);
+    }
+    16.67% {
+      transform: translateX(-100%) skewX(-20deg);
+    }
     33.33% {
       transform: translateX(calc(100% + 100vw)) skewX(-20deg);
     }
     33.34% {
       transform: translateX(-100%) skewX(-20deg);
     }
+    50% {
+      transform: translateX(calc(100% + 100vw)) skewX(-20deg);
+    }
+    50.01% {
+      transform: translateX(-100%) skewX(-20deg);
+    }
     66.66% {
       transform: translateX(calc(100% + 100vw)) skewX(-20deg);
     }
     66.67% {
+      transform: translateX(-100%) skewX(-20deg);
+    }
+    83.33% {
+      transform: translateX(calc(100% + 100vw)) skewX(-20deg);
+    }
+    83.34% {
       transform: translateX(-100%) skewX(-20deg);
     }
     100% {
