--- a/src/index.css
+++ b/src/index.css
@@ -42,4 +42,13 @@
     }
   }
 
+  @keyframes shimmer {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(600%);
+    }
+  }
+
 }
