--- a/src/index.css
+++ b/src/index.css
@@ -59,4 +59,38 @@
     }
   }
 
+  @keyframes luxGoldSweepSecondary {
+    0% {
+      transform: translateX(-180px) rotate(20deg);
+      opacity: 0;
+    }
+    8% {
+      opacity: 0.6;
+    }
+    95% {
+      opacity: 0.6;
+    }
+    100% {
+      transform: translateX(calc(100% + 180px)) rotate(20deg);
+      opacity: 0;
+    }
+  }
+
+  @keyframes luxGoldSweepTertiary {
+    0% {
+      transform: translateX(-210px) rotate(20deg);
+      opacity: 0;
+    }
+    11% {
+      opacity: 0.4;
+    }
+    95% {
+      opacity: 0.4;
+    }
+    100% {
+      transform: translateX(calc(100% + 210px)) rotate(20deg);
+      opacity: 0;
+    }
+  }
+
 }
