--- a/src/index.css
+++ b/src/index.css
@@ -47,10 +47,10 @@
       transform: translateX(-150px) rotate(20deg);
       opacity: 0;
     }
-    5% {
+    10% {
       opacity: 1;
     }
-    95% {
+    90% {
       opacity: 1;
     }
     100% {
@@ -61,11 +61,11 @@
 
   @keyframes luxGoldPulse {
     0%, 100% {
-      opacity: 0.3;
+      opacity: 1;
       filter: blur(3px);
     }
     50% {
-      opacity: 0.8;
+      opacity: 1;
       filter: blur(2px);
     }
   }
@@ -73,9 +73,17 @@
   @keyframes luxGoldShimmer {
     0% {
       transform: translateX(-200%) skew(-15deg);
+      opacity: 0;
+    }
+    10% {
+      opacity: 1;
+    }
+    90% {
+      opacity: 1;
     }
     100% {
       transform: translateX(200%) skew(-15deg);
+      opacity: 0;
     }
   }
 
